[metadata]
name = rim_airflow_utils
version = 0.1.0
author = yaerimkim
author_email = kylttop01@gmail.com
description = short_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://yaerimkim.github.io/rim_airflow_utils
project_urls =
    Bug Tracker = https://github.com/yaerimkim/rim_airflow_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rim_airflow_utils-ping = rim_airflow_utils:ping
